añadiendo variables y mixins

--- a/style2.css
+++ b/style2.css
@@ -1,141 +1,175 @@
+@charset "UTF-8";
+/*  VARIABLES COLORES  */
+/* Se puede cambiar to bottom a otras direcciones como to right (de izquierda a derecha), to left (de derecha a izquierda), to top (de abajo hacia arriba) o especificar un ángulo como 45deg. */
+/* El degradado radial con forma de diamante, se puede usar radial-gradient con la opción farthest-corner para que ocupe todo el contenedor. Sin embargo, CSS no tiene una opción específica para un degradado de "diamante", pero se puede lograr un efecto similar usando un degradado radial con una forma de "farthest-corner" o "closest-side". */
+/*  MIXINS TIPOGRAFÍA */
 /*estilos header*/
-h1{
+h1 {
   font-weight: bold;
   font-size: 64px;
-  color:#E67901;
+  color: #e67901;
   display: flex;
   justify-content: space-around;
 }
-p, h1{ 
-  -webkit-text-stroke: 0.2px #9614B5;
+
+p,
+h1 {
+  -webkit-text-stroke: 0.2px #9614b5;
 }
-.botoncitos{
+
+.botoncitos {
   width: 50px;
   height: 50px;
-  border-radius:50%;
+  border-radius: 50%;
   margin: 0;
-  border: 2px solid #EED0B2;
+  border: 2px solid #eed0b2;
   padding: 0;
-  display:inline-block;
-  position:relative;
-  
+  display: inline-block;
+  position: relative;
   cursor: pointer;
 }
-.contadores{
+
+.contadores {
   display: flex;
   justify-content: space-between;
-  color: #EED0B2;
+  color: #eed0b2;
   font-weight: bold;
   font-size: 30px;
   margin-top: 30px;
-  }
-.contadorUsuario{
+}
+
+.contadorUsuario {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   gap: 19px;
   margin-right: 50px;
 }
-.contadorMaquina{
+
+.contadorMaquina {
   display: flex;
-  justify-content:flex-end;
+  justify-content: flex-end;
   gap: 19px;
   margin-left: 50px;
 }
+
 /*estilos main*/
 body {
-    background-image: url("img/fondo.png");
-    background-size: 1133px;
-    font-family:"Luckiest Guy";
+  background-image: url("img/fondo.png");
+  background-size: 1133px;
+  font-family: "Luckiest Guy";
 }
 
-   .manos{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 100px;
-  }
-  .logo{
-    display: flex;
-    justify-content: center;
-    margin-top: 150px;
-  }
-.iniciar{
-display: flex;
-justify-content: center;
-gap: 20px;
+.manos {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 100px;
 }
-.nombre-jugador{
-background-color: #EED0B2;
-border: 2px solid #F6A347;
-border-radius: 20%;
+
+.logo {
+  display: flex;
+  justify-content: center;
+  margin-top: 150px;
 }
-  .play{
-      border-radius: 20%;
-      background-color: #F6A347;
-      border: 2px solid #F6A347;
-      padding-inline: 0;
-      padding-block: 0;    
-  }
-  .piedra, .papel,
-.tijeras{
-   background-color:#188CCC; 
+
+.iniciar {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
-.seleccionesUser{
-display: flex;
-justify-content: center;
-gap:19px;
-margin-top: 40px;
+
+.nombre-jugador {
+  background-color: #eed0b2;
+  border: 2px solid #f6a347;
+  border-radius: 20%;
 }
-.resultado, .tiempo{
-display: flex;
-justify-content: center;
+
+.play {
+  border-radius: 20%;
+  background-color: #f6a347;
+  border: 2px solid #f6a347;
+  padding-inline: 0;
+  padding-block: 0;
+}
+
+.piedra,
+.papel,
+.tijeras {
+  background-color: #188ccc;
+}
+
+.seleccionesUser {
+  display: flex;
+  justify-content: center;
+  gap: 19px;
+  margin-top: 40px;
+}
+
+.resultado,
+.tiempo {
+  display: flex;
+  justify-content: center;
   font-size: 150px;
   margin-top: 300px;
-  margin-bottom: 0;  
-  color:#F6A347; 
-  color: radial-gradient(#E67901, #F6A347);
-  -webkit-text-stroke: 3px #9614B5;
+  margin-bottom: 0;
+  color: #f6a347;
+  color: radial-gradient(#e67901, #f6a347);
+  -webkit-text-stroke: 3px #9614b5;
 }
+
 /*estilos footer*/
 [popover] {
   width: 727px;
-  background: #EED0B2;
-  border-bottom: 5px solid #F6A347;
+  background: #eed0b2;
+  border-bottom: 5px solid #f6a347;
   border-radius: 20%;
-  color: #9614B5;
-  font-size: 32px;  
-  padding: 40px;     
+  color: #9614b5;
+  font-size: 32px;
+  padding: 40px;
 }
-.config{
-display: flex;
-justify-content: center;
-gap:950px;
-margin-top: 40px;
-}
-.config-result{
+
+.config {
   display: flex;
   justify-content: center;
-  gap:100px;
-  }
-.cerrar, .sonido, .reiniciar, .home, .reglas{
-background-color:#F6A347 ;
-color:darkblue;
-font-weight: bold;
+  gap: 950px;
+  margin-top: 40px;
 }
-.iconos{
-  margin:12px;
+
+.config-result {
+  display: flex;
+  justify-content: center;
+  gap: 100px;
 }
-.reglas{
+
+.cerrar,
+.sonido,
+.reiniciar,
+.home,
+.reglas {
+  background-color: #f6a347;
+  color: darkblue;
+  font-weight: bold;
+}
+
+.iconos {
+  margin: 12px;
+}
+
+.reglas {
   margin: 35px;
 }
-.cerrarppv{
+
+.cerrarppv {
   margin-top: 30px;
- margin-left: 300px;
+  margin-left: 300px;
 }
+
 /*.tiempo{ //es para un radio de desenfoque
-  border-radius:50%;
-  text-shadow:
-  3px 3px 2px #EED0B2,
-  -3px 3px 2px #EED0B2,
-  -3px -3px 0 #EED0B2,
-  3px -3px 0 #EED0B2,
-} */
+    border-radius:50%;
+    text-shadow:
+    3px 3px 2px #EED0B2,
+    -3px 3px 2px #EED0B2,
+    -3px -3px 0 #EED0B2,
+    3px -3px 0 #EED0B2,
+  } */
+
+/*# sourceMappingURL=style2.css.map */
