--- a/main-page/styles.css
+++ b/main-page/styles.css
@@ -105,6 +105,7 @@ form{
     height:41px;
 }
 .play{
+    padding-bottom: 15px;
     border:none;
     flex: 1;
     flex-grow: 1;
@@ -120,7 +121,7 @@ form{
 
 /* popover */
 
-.botoncitos {
+/* .botoncitos {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -130,8 +131,8 @@ form{
     display: inline-block;
     position: relative;
     cursor: pointer;
-  }
-  
+  } */
+
   [popover] {
     width: 727px;
     background: #eed0b2;
@@ -140,14 +141,24 @@ form{
     color: #9614b5;
     font-size: 32px;
     padding: 40px;
+
   }
   .cerrarppv {
     margin-top: 30px;
     margin-left: 300px;
+    border: #9614b5 1px solid;
+
   }
-  
+
+  button{
+    border: none;
+    border-radius: 100%;
+    height: 50px;
+  }
   .cerrar{
     background-color: #f6a347;
+    width: 20px;
+    height: 20px;
     color: darkblue;
     font-weight: bold;
   }
