--- a/style_game.css
+++ b/style_game.css
@@ -1,4 +1,11 @@
-*{
+@charset "UTF-8";
+/*  VARIABLES COLORES  */
+/* Se puede cambiar to bottom a otras direcciones como to right (de izquierda a derecha), to left (de derecha a izquierda), to top (de abajo hacia arriba) o especificar un ángulo como 45deg. */
+/* El degradado radial con forma de diamante, se puede usar radial-gradient con la opción farthest-corner para que ocupe todo el contenedor. Sin embargo, CSS no tiene una opción específica para un degradado de "diamante", pero se puede lograr un efecto similar usando un degradado radial con una forma de "farthest-corner" o "closest-side". */
+/*  MIXINS TIPOGRAFÍA */
+/*estilos header*/
+
+* {
   font-family: "Luckiest Guy", cursive;
   font-weight: 400;
   font-style: normal;
@@ -7,16 +14,15 @@
   padding: 0;
 }
 
-html{
+html {
   width: 100%;
 }
 
-
-a{
+a {
   color: #010A74;
 }
 
-.controls{
+.controls {
   display: flex;
   justify-content: space-between;
   padding: 20px;
@@ -24,13 +30,12 @@ a{
   margin-right: 20px;
   margin-top: -10px;
 }
-  
 
-#icon{
+#icon {
   display: inline-block;
   font-size: 18px;
   width: 50px;
-  height: 50px; 
+  height: 50px;
   background-color: #F6A347;
   border-radius: 50%;
   padding: 10px;
@@ -40,105 +45,109 @@ a{
   justify-content: center;
 }
 
-img{
+img {
   width: 35%;
   height: 35%;
-
 }
+
 /*estilos header*/
-h1{
+h1 {
   font-weight: bold;
   font-size: 64px;
-  color:#E67901;
+  color: #EED0B2;
   display: flex;
   justify-content: space-around;
 }
-p, h1{ 
+
+p, h1 {
   -webkit-text-stroke: 0.2px #9614B5;
 }
-.buttons{
+
+.buttons {
   width: 50px;
   height: 50px;
-  border-radius:50%;
+  border-radius: 50%;
   margin: 0;
   border: 2px solid #EED0B2;
   padding: 0;
-  display:inline-block;
-  position:center;
+  display: inline-block;
+  position: center;
   cursor: pointer;
 }
-.score{
+
+.score {
   display: flex;
   justify-content: space-between;
   color: #EED0B2;
   font-weight: bold;
   font-size: 30px;
   margin-top: 30px;
-  }
-.scoreComputer{
+}
+
+.scoreComputer {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   gap: 19px;
   margin-left: 50px;
 }
-.scoreUser{
+
+.scoreUser {
   display: flex;
-  justify-content:flex-end;
+  justify-content: flex-end;
   gap: 19px;
   margin-right: 50px;
 }
 
 /*estilos main*/
-
-.bg{
+.bg {
   width: 100%;
   height: auto;
   background-image: url(./game-page/img/PPT_ELEMENTOS-01-mobile.png);
-  background-size:content;
+  background-size: content;
   background-repeat: no-repeat;
 }
 
-.hands{
-    height: auto;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
-
-.start{
-display: flex;
-justify-content: center;
-gap: 20px;
+.hands {
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
-.player-name{
-background-color: #EED0B2;
-border: 2px solid #F6A347;
-border-radius: 20%;
+.start {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
-.piedra, .papel,
-.tijeras{
-background-color:#188CCC; 
+.player-name {
+  background-color: #EED0B2;
+  border: 2px solid #F6A347;
+  border-radius: 20%;
+}
+
+.piedra, .papel, .tijeras {
+  background-color: #188CCC;
 }
 
 .selectsUser {
   display: flex;
   justify-content: center;
   gap: 19px;
-  margin-top: -70px; 
+  margin-top: -70px;
 }
 
-.result, .time{
-display: flex;
-justify-content: center;
+.result, .time {
+  display: flex;
+  justify-content: center;
   font-size: 150px;
   margin-top: 300px;
-  margin-bottom: 0;  
-  color:#F6A347; 
-  color: radial-gradient(#E67901, #F6A347);
+  margin-bottom: 0;
+  color: #F6A347;
+  color: radial-gradient(closest-side, #F6A347 0%, #E67900 50%, #F6A347 100%);
   -webkit-text-stroke: 3px #9614B5;
 }
+
 /*estilos footer*/
 [popover] {
   width: 727px;
@@ -146,29 +155,31 @@ justify-content: center;
   border-bottom: 5px solid #F6A347;
   border-radius: 20%;
   color: #9614B5;
-  font-size: 32px;  
-  padding: 40px;     
+  font-size: 32px;
+  padding: 40px;
 }
 
-.config-result{
+.config-result {
   display: flex;
   justify-content: center;
-  gap:100px;
-  }
-
-.close, .sound, .reset, .home, .rules{
-background-color:#F6A347 ;
-color:darkblue;
-font-weight: bold;
+  gap: 100px;
 }
 
-.reglas{
+.close, .sound, .reset, .home, .rules {
+  background-color: #F6A347;
+  color: #010A74;
+  font-weight: bold;
+}
+
+.rules {
   margin: 35px;
 }
-.cerrarppv{
+
+.cerrarppv {
   margin-top: 30px;
   margin-left: 300px;
 }
+
 /*.tiempo{ //es para un radio de desenfoque
   border-radius:50%;
   text-shadow:
@@ -178,3 +189,4 @@ font-weight: bold;
   3px -3px 0 #EED0B2,
 } */
 
+/*# sourceMappingURL=style_game.css.map */
