--- a/styles.css
+++ b/styles.css
@@ -1,126 +1,131 @@
-*{
-    font-family: "Luckiest Guy", cursive;
-    font-weight: 400;
-    font-style: normal;
-    box-sizing: border-box;
-    margin: 0%;
-    padding: 0%;
+* {
+  font-family: "Luckiest Guy", cursive;
+  font-weight: 400;
+  font-style: normal;
+  box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
 }
 
-html{
-    width: 100%;
-}
-.bg{
-    width: 100%;
-    height: auto;
-    background-image: url(./main-page/Images/PPT_ELEMENTOS-01-mobile.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-a{
-    color: #010A74;
+html {
+  width: 100%;
 }
 
-.controls{
-    display: flex;
-    justify-content: space-around;
-    gap: 600px;
-    align-items: center;
-    margin-top: 20px;
-
-
-}
-#icon{
-    text-align: center;
-    display: inline-block;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    font-size: 21px;
-    background-color: #F6A347;
-    border-radius: 50%;
-    padding: 10px;
-    margin: 0px;
-    border: #EED0B2 3px solid;
+.bg {
+  width: 100%;
+  height: auto;
+  background-image: url(./main-page/Images/PPT_ELEMENTOS-01-mobile.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-img{
-    width: 376px;
-    height: auto;
-}
-.logo{
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 176px;
-}
-footer{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+a {
+  color: #010A74;
 }
 
-.info{
-    width: 5%;
-    margin-left: 30px;
-    /* margin-right: 120px; */
-    display: flex;
-
-}
-.input-button{
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+.controls {
+  display: flex;
+  justify-content: space-around;
+  gap: 600px;
+  align-items: center;
+  margin-top: 20px;
 }
 
-form{
-    display: flex;
-    justify-content: center;
-}
-.input-player{
-    text-align: center;
-    font-size: 20px;
-    width: 274px;
-    height: 41px;
-    display: flex;
-    background-color: #EED0B2;
-    border: #F6A347 3px solid;
-    border-radius: 32px;
-}
-.input-player::placeholder{
-    color: #9614B5;
+#icon {
+  text-align: center;
+  display: inline-block;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  font-size: 21px;
+  background-color: #F6A347;
+  border-radius: 50%;
+  padding: 10px;
+  margin: 0px;
+  border: #EED0B2 3px solid;
 }
 
-.play-father{
-    display: flex;
-    display: block;
-    align-items: center;
-    text-align: center;
-    background-color: #F6A347;
-    border-radius: 30px;
-    border: #EED0B2 3px solid;
-    width: 123px ;
-    height:41px;
+img {
+  width: 376px;
+  height: auto;
 }
-.play{
-    padding-bottom: 15px;
-    border:none;
-    flex: 1;
-    flex-grow: 1;
-    align-items: center;
-    font-size: 32px;
-    border-radius: 20px;
-    background: linear-gradient(#EB1A7E,#010A74);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 1.5px #F6A347;
-    filter: drop-shadow(3px 2px 4px #00000091);
+
+.logo {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 176px;
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.info {
+  width: 5%;
+  margin-left: 30px;
+  /* margin-right: 120px; */
+  display: flex;
+}
+
+.input-button {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}
+
+.input-player {
+  text-align: center;
+  font-size: 20px;
+  width: 274px;
+  height: 41px;
+  display: flex;
+  background-color: #EED0B2;
+  border: #F6A347 3px solid;
+  border-radius: 32px;
+}
+
+.input-player::placeholder {
+  color: #9614B5;
+}
+
+.play-father {
+  display: flex;
+  display: block;
+  align-items: center;
+  text-align: center;
+  background-color: #F6A347;
+  border-radius: 30px;
+  border: #EED0B2 3px solid;
+  width: 123px;
+  height: 41px;
+}
+
+.play {
+  padding-bottom: 15px;
+  border: none;
+  flex: 1;
+  flex-grow: 1;
+  align-items: center;
+  font-size: 32px;
+  border-radius: 20px;
+  background: linear-gradient(#EB1A7E, #010A74);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1.5px #F6A347;
+  filter: drop-shadow(3px 2px 4px rgba(0, 0, 0, 0.568627451));
 }
 
 /* popover */
-
 /* .botoncitos {
     width: 50px;
     height: 50px;
@@ -132,34 +137,34 @@ form{
     position: relative;
     cursor: pointer;
   } */
+[popover] {
+  width: 727px;
+  background: #eed0b2;
+  border-bottom: 5px solid #f6a347;
+  border-radius: 20%;
+  color: #9614b5;
+  font-size: 32px;
+  padding: 40px;
+}
 
-  [popover] {
-    width: 727px;
-    background: #eed0b2;
-    border-bottom: 5px solid #f6a347;
-    border-radius: 20%;
-    color: #9614b5;
-    font-size: 32px;
-    padding: 40px;
+.cerrarppv {
+  margin-top: 30px;
+  margin-left: 300px;
+  border: #9614b5 1px solid;
+}
 
-  }
-  .cerrarppv {
-    margin-top: 30px;
-    margin-left: 300px;
-    border: #9614b5 1px solid;
+button {
+  border: none;
+  border-radius: 100%;
+  height: 50px;
+}
 
-  }
+.cerrar {
+  background-color: #f6a347;
+  width: 20px;
+  height: 20px;
+  color: darkblue;
+  font-weight: bold;
+}
 
-  button{
-    border: none;
-    border-radius: 100%;
-    height: 50px;
-  }
-  .cerrar{
-    background-color: #f6a347;
-    width: 20px;
-    height: 20px;
-    color: darkblue;
-    font-weight: bold;
-  }
-
+/*# sourceMappingURL=styles.css.map */
