--- a/main-page/styles.css
+++ b/main-page/styles.css
@@ -1,19 +1,3 @@
-/*  VARIABLES COLORES  */
-$cream-color: #EED0B2;
-$yellow-color: #F6A347;
-$blue-color: #188CCC;
-$pink-color: #EB1A7E;
-$purple-color: #9614B5;
-$dark-blue-color: #010A74;
-
-/* Se puede cambiar to bottom a otras direcciones como to right (de izquierda a derecha), to left (de derecha a izquierda), to top (de abajo hacia arriba) o especificar un ángulo como 45deg. */
-$gradient-1: linear-gradient(to right, #F6A347 0%, #E67900 50%, #F6A347 100%);
-$gradient-2: linear-gradient(to bottom, #F6A347 0%, #EF5168 62%, #EB1A7E 70%, #F6A347 100%);
-$gradient-3: linear-gradient(to right, #EB1A7E 0%, #010A74 100%);
-$gradient-4: radial-gradient(closest-side, #F6A347 0%, #E67900 50%, #F6A347 100%); 
-/* El degradado radial con forma de diamante, se puede usar radial-gradient con la opción farthest-corner para que ocupe todo el contenedor. Sin embargo, CSS no tiene una opción específica para un degradado de "diamante", pero se puede lograr un efecto similar usando un degradado radial con una forma de "farthest-corner" o "closest-side". */
-
-
 *{
     font-family: "Luckiest Guy", cursive;
     font-weight: 400;
@@ -133,7 +117,7 @@ form{
     align-items: center;
     font-size: 32px;
     border-radius: 20px;
-    $gradient-3;
+    background: linear-gradient(#EB1A7E,#010A74);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1.5px #F6A347;
