--- a/main-page/styles.css
+++ b/main-page/styles.css
@@ -41,7 +41,7 @@ a{
     border: #EED0B2 3px solid;
 }
 .fa-solid fa-volume-high:hover{
-    background-image: url("./Images/img.icons8.webp");
+    background-image: (url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round' stroke-width='2'%3E%3Cpath d='m22 15l-6-6m6 0l-6 6'/%3E%3Cpath stroke-linejoin='round' d='M2 14.959V9.04C2 8.466 2.448 8 3 8h3.586a.98.98 0 0 0 .707-.305l3-3.388c.63-.656 1.707-.191 1.707.736v13.914c0 .934-1.09 1.395-1.716.726l-2.99-3.369A.98.98 0 0 0 6.578 16H3c-.552 0-1-.466-1-1.041'/%3E%3C/g%3E%3C/svg%3E"));
 
 }
 
@@ -128,18 +128,6 @@ form{
 }
 
 /* popover */
-
-/* .botoncitos {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin: 0;
-    border: 2px solid #eed0b2;
-    padding: 0;
-    display: inline-block;
-    position: relative;
-    cursor: pointer;
-  } */
 
   [popover] {
     width: 727px;
