--- a/style_game.css
+++ b/style_game.css
@@ -255,6 +255,11 @@ p, h1 {
   background-color: #188CCC;
 }
 
+.selector img {
+  width: 95%;
+  height: auto;
+}
+
 .selectsUser {
   display: flex;
   justify-content: center;
