--- a/main-page/styles-sara.css
+++ b/main-page/styles-sara.css
@@ -6,7 +6,6 @@
     margin: 0%;
     padding: 0%;
 }
-
 html{
     width: 100%;
 }
@@ -27,19 +26,6 @@ a{
     align-items: center;
     margin-top: 20px;
 }
-/* #icon{
-    text-align: center;
-    display: inline-block;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    font-size: 21px;
-    background-color: #F6A347;
-    border-radius: 50%;
-    padding: 10px;
-    margin: 0px;
-    border: #EED0B2 3px solid;
-} */
 
 .controls-buttons{
     text-align: center;
@@ -55,18 +41,7 @@ a{
     border: #EED0B2 3px solid;
     cursor: pointer;
 
-}
-
-/* #sound-on{
-    
-}
-#sound-off{
-
-}
-#sound-button{
-    
-}
-*/ 
+} 
 .hidden {
     opacity: 0;
     pointer-events: none;
@@ -74,11 +49,9 @@ a{
 .button:active {
     transform: scale(1.1);
 } 
-#remove{
-    display: none;
-}
+
 img{
-    width: 376px;
+    width: 45%;
     height: auto;
 }
 .logo{
@@ -93,7 +66,6 @@ footer{
     display: flex;
     justify-content: space-between;
 }
-
 .info{
     width: 5%;
     margin-left: 30px;
@@ -173,26 +145,24 @@ form{
     margin-left: 150px;
     margin-top: 30px;
 
-  }
-  .cerrarppv {
-    margin-top: 15px;
-    margin-left: 200px;
-    border: #9614b5 1px solid;
-
-  }
-
-  button{
-    border: none;
-    border-radius: 100%;
-    height: 50px;
-  }
-  .cerrar{
-    background-color: #f6a347;
-    width: 20px;
-    height: 20px;
-    color: darkblue;
-    font-weight: bold;
-  }
+}
+.cerrarppv {
+  margin-top: 15px;
+  margin-left: 200px;
+  border: #9614b5 1px solid;
+}
+button{
+  border: none;
+  border-radius: 100%;
+  height: 50px;
+}
+.cerrar{
+  background-color: #f6a347;
+  width: 20px;
+  height: 20px;
+  color: darkblue;
+  font-weight: bold;
+}
 
 .transformed{
     transform: rotate(180deg);
