--- a/style_game.scss
+++ b/style_game.scss
@@ -21,10 +21,10 @@ a{
 .controls{
   display: flex;
   justify-content: space-between;
+  padding: 20px;
   margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 20px;
-  margin-top: -40px;
+  margin-top: -10px;
 }
 
 #icon{
@@ -35,6 +35,7 @@ a{
   background-color:$yellow-color ;
   border-radius: 50%;
   padding: 10px;
+  margin-top: -150px;
   border: 2px solid $cream-color;
   text-align: center;
   justify-content: center;
@@ -63,7 +64,7 @@ p, h1{
   width: 50px;
   height: 50px;
   border-radius:50%;
-  margin-top: -200px;
+  margin: 0;
   border: 2px solid $cream-color;
   padding: 0;
   display:inline-block;
@@ -105,86 +106,16 @@ p, h1{
 }
 
 .hands{
+  height: auto;
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
-}
-
-.left{
-  height: 35%;
-  width: 35%;
-  display: flex;
-  justify-content: start;
-  margin-top: 20px;
-}
-
-.rigth{
-  height: 35%;
-  width: 35%;
-  display: flex;
-  justify-content: end;
   margin-top: 20px;
 }
 
 .start{
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 250px;
-}
-
-.timer {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background: $yellow-color;
-  border: 5px solid $cream-color;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  color: $gradient-4;
-  font-size: 500px;
-  font-family: "Luckiest Guy", cursive;
-  font-weight: bolder;
-  margin-top: -20px;
-}
-
-#time {
-  animation: countdown 5s linear infinite;
-  position: absolute;
-  top: 52%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 120px;
-  color: white;
-  transition: color 0.2s ease;
-}
-
-@keyframes countdown {
-  from {
-    content: "5";
-  }
-  20% {
-    content: "4";
-  }
-  40% {
-    content: '3';
-  }
-  60% {
-    content: '2';
-  }
-  80% {
-    content: '1';
-  }
-  to {
-    content: '0';
-  }
-}
-
-.hidden {
-  opacity: 0;
-  pointer-events: none;
+  gap: 20px;
 }
 
 .player-name{
@@ -193,39 +124,25 @@ p, h1{
   border-radius: 20%;
 }
 
-.selector{
-  width: 50px;
-  height: 50px;
-  border-radius:50%;
-  border: 2px solid $cream-color;
-  position:center;
-  cursor: pointer;
+.piedra, .papel, .tijeras{
   background-color:$blue-color; 
-}
-
-button:active, {
-  transform: scale(0.95);
-}
-
-.selector img {
-  width: 95%;
-  height: auto;
 }
 
 .selectsUser {
   display: flex;
   justify-content: center;
   gap: 19px;
-  margin-top: -30px;
+  margin-top: -70px; 
 }
 
-.result, {
+.result, .time{
   display: flex;
   justify-content: center;
   font-size: 150px;
   margin-top: 300px;
   margin-bottom: 0;  
-  color: $yellow-color; 
+  color:$yellow-color; 
+  color: $gradient-4;
   -webkit-text-stroke: 3px $purple-color;
 }
 
@@ -247,17 +164,27 @@ button:active, {
   gap:100px;
 }
 
-.close, .sound {
+.close, .sound, .reset, .home, .rules{
   background-color:$yellow-color ;
   color:$dark-blue-color;
   font-weight: bold;
 }
-
-.close:active, .sound:active {
-  transform: scale(0.95);
-}
   
+.rules{
+  margin: 35px;
+}
 
+.cerrarppv{
+  margin-top: 30px;
+  margin-left: 300px;
+}
+
+#effect {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+}
 /*.tiempo{ //es para un radio de desenfoque
   border-radius:50%;
   text-shadow:
