--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
 @import "style2.scss";
 
-* {
+*{
     font-family: "Luckiest Guy", cursive;
     font-weight: 400;
     font-style: normal;
@@ -8,21 +8,20 @@
     margin: 0%;
     padding: 0%;
 }
-
-html {
+html{
     width: 100%;
 }
-.bg {
+.bg{
     width: 100%;
     height: auto;
-    background-image: url(/main-page/Images/PPT_ELEMENTOS-01-mobile.png);
+    background-image: url(./main-page/Images/PPT_ELEMENTOS-01-mobile.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
-a {
-    color: #010a74;
+a{
+    color: #010A74;
 }
-.controls {
+.controls{
     display: flex;
     justify-content: space-around;
     gap: 600px;
@@ -30,102 +29,107 @@ a {
     margin-top: 20px;
 }
 
-#icon {
+.controls-buttons{
     text-align: center;
     display: inline-block;
     align-items: center;
     width: 50px;
     height: 50px;
     font-size: 21px;
-    background-color: #f6a347;
+    background-color: #F6A347;
     border-radius: 50%;
     padding: 10px;
     margin: 0px;
-    border: #eed0b2 3px solid;
-}
+    border: #EED0B2 3px solid;
+    cursor: pointer;
 
-.fa-solid fa-volume-high:hover {
-    background-image: (
-        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round' stroke-width='2'%3E%3Cpath d='m22 15l-6-6m6 0l-6 6'/%3E%3Cpath stroke-linejoin='round' d='M2 14.959V9.04C2 8.466 2.448 8 3 8h3.586a.98.98 0 0 0 .707-.305l3-3.388c.63-.656 1.707-.191 1.707.736v13.914c0 .934-1.09 1.395-1.716.726l-2.99-3.369A.98.98 0 0 0 6.578 16H3c-.552 0-1-.466-1-1.041'/%3E%3C/g%3E%3C/svg%3E")
-    );
-}
+} 
+.hidden {
+    opacity: 0;
+    pointer-events: none;
+} 
+.button:active {
+    transform: scale(1.1);
+} 
 
-img {
-    width: 376px;
+img{
+    width: 45%;
     height: auto;
 }
-
-.logo {
+.logo{
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 176px;
 }
-
-footer {
-    padding-right: 40%;
+footer{
+    width: 100%;
     display: flex;
     justify-content: space-between;
-    align-content: center;
+}
+.info{
+    width: 5%;
+    margin-left: 30px;
+    /* margin-right: 120px; */
+    display: flex;
+}
+.input-button{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
 }
 
-
-.input-button {
-    gap: 2%;
+form{
+    display: flex;
+    justify-content: center;
 }
-
-form {
-    
-}
-
-.input-player {
+.input-player{
     text-align: center;
     font-size: 20px;
     width: 274px;
     height: 41px;
     display: flex;
-    background-color: #eed0b2;
-    border: #f6a347 3px solid;
+    background-color: #EED0B2;
+    border: #F6A347 3px solid;
     border-radius: 32px;
 }
-
-.input-player::placeholder {
-    color: #9614b5;
+.input-player::placeholder{
+    color: #9614B5;
 }
 
-.play-father {
+.play-father{
     display: flex;
     display: block;
     align-items: center;
     text-align: center;
-    background-color: #f6a347;
+    background-color: #F6A347;
     border-radius: 30px;
-    border: #eed0b2 3px solid;
-    width: 123px;
-    height: 41px;
+    border: #EED0B2 3px solid;
+    width: 123px ;
+    height:41px;
 }
-
-.play-father:hover {
+.play-father:hover{
     background-color: #f6bc7a;
     cursor: pointer;
-}
 
-.play {
+}
+.play{
     padding-bottom: 15px;
-    border: none;
+    border:none;
     flex: 1;
     flex-grow: 1;
     align-items: center;
     font-size: 32px;
     border-radius: 20px;
-    background: linear-gradient(#eb1a7e, #010a74);
+    background: linear-gradient(#EB1A7E,#010A74);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 1.5px #f6a347;
+    -webkit-text-stroke: 1.5px #F6A347;
     filter: drop-shadow(3px 2px 4px #00000091);
 }
-
-.play:hover {
+.play:hover{
     cursor: pointer;
 }
 
