--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ html {
 
 html {
   width: 100%;
+  height: 100%;
 }
 
 .bg {
@@ -83,9 +84,9 @@ a {
 .controls {
   display: flex;
   justify-content: space-around;
-  gap: 600px;
+  gap: 65%;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 2%;
 }
 
 .controls-buttons {
@@ -125,12 +126,6 @@ img {
   height: 176px;
 }
 
-footer {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
 .info {
   width: 5%;
   margin-left: 30px;
@@ -139,7 +134,7 @@ footer {
 }
 
 .input-button {
-  width: 90%;
+  width: 10%;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -148,6 +143,8 @@ footer {
 form {
   display: flex;
   justify-content: center;
+  align-items: center;
+  margin-right: 2%;
 }
 
 .input-player {
@@ -167,14 +164,14 @@ form {
 
 .play-father {
   display: flex;
-  display: block;
+  justify-content: center;
   align-items: center;
-  text-align: center;
   background-color: #F6A347;
   border-radius: 30px;
   border: #EED0B2 3px solid;
   width: 123px;
   height: 41px;
+  margin-right: 150px;
 }
 
 .play-father:hover {
@@ -183,13 +180,9 @@ form {
 }
 
 .play {
-  padding-bottom: 15px;
   border: none;
-  flex: 1;
-  flex-grow: 1;
   align-items: center;
   font-size: 32px;
-  border-radius: 20px;
   background: linear-gradient(#EB1A7E, #010A74);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -199,6 +192,13 @@ form {
 
 .play:hover {
   cursor: pointer;
+}
+
+footer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 /* popover */
