--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,7 @@
 }
 html{
     width: 100%;
+    height: 100%;
 }
 .bg{
     width: 100%;
@@ -24,9 +25,9 @@ a{
 .controls{
     display: flex;
     justify-content: space-around;
-    gap: 600px;
+    gap: 65%;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 2%;
 }
 
 .controls-buttons{
@@ -63,11 +64,7 @@ img{
     align-items: center;
     height: 176px;
 }
-footer{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
+
 .info{
     width: 5%;
     margin-left: 30px;
@@ -75,7 +72,7 @@ footer{
     display: flex;
 }
 .input-button{
-    width: 90%;
+    width: 10%;
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -84,6 +81,8 @@ footer{
 form{
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin-right: 2%;
 }
 .input-player{
     text-align: center;
@@ -101,14 +100,14 @@ form{
 
 .play-father{
     display: flex;
-    display: block;
+    justify-content: center;
     align-items: center;
-    text-align: center;
     background-color: #F6A347;
     border-radius: 30px;
     border: #EED0B2 3px solid;
     width: 123px ;
     height:41px;
+    margin-right: 150px;
 }
 .play-father:hover{
     background-color: #f6bc7a;
@@ -116,13 +115,9 @@ form{
 
 }
 .play{
-    padding-bottom: 15px;
     border:none;
-    flex: 1;
-    flex-grow: 1;
     align-items: center;
     font-size: 32px;
-    border-radius: 20px;
     background: linear-gradient(#EB1A7E,#010A74);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -132,6 +127,16 @@ form{
 .play:hover{
     cursor: pointer;
 }
+
+
+footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
 
 /* popover */
 
