--- a/style_game.css
+++ b/style_game.css
@@ -157,27 +157,58 @@ p, h1 {
 }
 
 .hands {
+  height: auto;
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.left {
-  height: 35%;
-  width: 35%;
-  display: flex;
-  justify-content: start;
-  margin-top: 20px;
+.leftHand {
+  height: 400px;
+  width: 400px;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  animation: leftHands_move 1.5s linear 5;
 }
 
-.rigth {
-  height: 35%;
-  width: 35%;
-  display: flex;
-  justify-content: end;
-  margin-top: 20px;
+.rightHand {
+  height: 400px;
+  width: 400px;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  animation: rightHands_move 1.5s linear 5;
 }
 
+@keyframes leftHands_move {
+  0% {
+    background-image: url(/game-page/img/PPT\ ELEMENTOS-piedra\ izq.png);
+    background-size: 100%;
+  }
+  33% {
+    background-image: url(/game-page/img/PPT\ ELEMENTOS-papel\ izq.png);
+    background-size: 100%;
+  }
+  66% {
+    background-image: url(/game-page/img/PPT\ ELEMENTOS-tijera\ izq.png);
+    background-size: 100%;
+  }
+}
+@keyframes rightHands_move {
+  0% {
+    background-image: url(/game-page/img/PPT\ ELEMENTOS-piedra\ der.png);
+    background-size: 100%;
+  }
+  33% {
+    background-image: url(/game-page/img/PPT\ ELEMENTOS-papel\ der.png);
+    background-size: 100%;
+  }
+  66% {
+    background-image: url(/game-page/img/PPT\ ELEMENTOS-tijera\ der.png);
+    background-size: 100%;
+  }
+}
 .start {
   display: flex;
   justify-content: center;
@@ -281,6 +312,15 @@ button:active {
 }
 
 /*estilos footer*/
+[popover], #effect {
+  width: 727px;
+  background: #EED0B2;
+  border-bottom: 5px solid #F6A347;
+  border-radius: 20%;
+  color: #9614B5;
+  font-size: 32px;
+  padding: 40px;
+}
 
 .config-result {
   display: flex;
@@ -294,16 +334,17 @@ button:active {
   font-weight: bold;
 }
 
-#effect {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  color: #F6A347;
-  font-size: 32px;
-  text-align: center;
-  background-color: transparent;
-backdrop-filter: blur(20px);
-padding: 100px;
+.close:active, .sound:active {
+  transform: scale(0.95);
 }
+
+/*.tiempo{ //es para un radio de desenfoque
+  border-radius:50%;
+  text-shadow:
+  3px 3px 2px #EED0B2,
+  -3px 3px 2px #EED0B2,
+  -3px -3px 0 #EED0B2,
+  3px -3px 0 #EED0B2,
+  } */
+
+/*# sourceMappingURL=style_game.css.map */
